.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Execution__c.object
<CustomObject>
    <description>Details of each test case executed and the results including any failures. Screenshots and logs can be attached as Files</description>
    <fields>
        <fullName>provar__Browser_Version__c</fullName>
        <label>Browser Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Browser__c</fullName>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Comments__c</fullName>
        <description>Any additional comments about this test case that you wish to record. For example, in the event of a test failure you may wish to log additional details of the test case and the data that was being used in the processing at that time.</description>
        <inlineHelpText>Any comments about the test result you wish to report, such as to explain false positives or summary of reasons for failure or abandonment of a test.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Copy_Test_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked any test steps associated to the test case will be automatically populated ready for completion by manual or automated test integration</description>
        <inlineHelpText>Check to automatically populate the test steps from the associated Test Case</inlineHelpText>
        <label>Copy Test Case Steps?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Device_Model__c</fullName>
        <label>Device Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Display_Resolution__c</fullName>
        <label>Display Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Duration_Is_Above_Maximum__c</fullName>
        <formula>AND(
    NOT(ISBLANK(provar__Start_Date_Time__c)), 
    NOT(ISBLANK(provar__End_Date_Time__c)), 
    provar__Duration__c &gt; provar__Test_Case__r.provar__Maximum_Execution_Time__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Is Above Maximum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Duration__c</fullName>
        <description>If the Test Start Date/Time and End Date/Time are provided the duration of the test is calculated automatically in minutes. Note that test execution times will vary with network and platform performance and should ideally be considered as part of an average across multiple executions.</description>
        <formula>IF(ISNULL(provar__End_Date_Time__c) || ISNULL(provar__Start_Date_Time__c),0,(provar__End_Date_Time__c - provar__Start_Date_Time__c) *24 * 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__End_Date_Time__c</fullName>
        <description>The Test End Date/Time can be populated to log the finish time of a specific test case execution. It is used in the calculation of the Duration, if provided.</description>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__Environment_Name__c</fullName>
        <formula>provar__Test_Cycle__r.provar__Environment__r.Name</formula>
        <label>Environment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__No_of_Steps__c</fullName>
        <description>Number of test step executions associated to this record</description>
        <inlineHelpText>The number of test step execution child records related to this execution instance</inlineHelpText>
        <label>Number of Steps</label>
        <summaryForeignKey>provar__Test_Step_Execution__c.provar__Test_Execution__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Number_of_Defects__c</fullName>
        <label>Number of Defects</label>
        <summaryForeignKey>provar__Test_Execution_Defect__c.provar__Test_Execution__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Operating_System_Version__c</fullName>
        <label>Operating System Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Operating_System__c</fullName>
        <label>Operating System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Start_Date_Time__c</fullName>
        <description>The Test Start Date/Time can be populated to log the start time of a specific test case execution. Ensure you measure all tests from the same starting point, either before their Connection step or immediately after any other test setup step you wish to exclude from Duration calculations..</description>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <description>The outcome of the Test execution in terms of Pass, Fail or Skipped for reporting purposes. The picklist is unrestricted so that you can insert additional status values should you wish.</description>
        <inlineHelpText>Select the result of the test execution.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Test_Result</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Test_Case_Steps__c</fullName>
        <formula>provar__Test_Case__r.provar__No_of_Steps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Case Steps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Test Case executed</description>
        <inlineHelpText>The Test Case executed</inlineHelpText>
        <label>Test Case</label>
        <referenceTo>provar__Test_Case__c</referenceTo>
        <relationshipLabel>Executions</relationshipLabel>
        <relationshipName>Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Test_Cycle__c</fullName>
        <description>Test Cycle which was run to cause this execution result to be logged</description>
        <inlineHelpText>The parent test cycle which executed this test result</inlineHelpText>
        <label>Test Cycle</label>
        <referenceTo>provar__Test_Cycle__c</referenceTo>
        <relationshipLabel>Test Executions</relationshipLabel>
        <relationshipName>Test_Executions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>provar__Test_Suite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User to define the test suite this test case is part of</description>
        <label>Test Suite</label>
        <referenceTo>provar__Test_Suite__c</referenceTo>
        <relationshipLabel>Test Executions</relationshipLabel>
        <relationshipName>Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester</label>
        <referenceTo>provar__Person__c</referenceTo>
        <relationshipLabel>Test Executions</relationshipLabel>
        <relationshipName>Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Use_Test_Cycle_Test_Settings__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Test Cycle Test Settings</label>
        <type>Checkbox</type>
    </fields>
    <label>Test Execution</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Test_Cycle__c</columns>
        <columns>provar__Test_Case__c</columns>
        <columns>provar__Start_Date_Time__c</columns>
        <columns>provar__Status__c</columns>
        <columns>provar__Duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{00000000}</displayFormat>
        <label>Test Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>provar__Start_date_must_be_before_end_date</fullName>
        <active>true</active>
        <description>The start date time for a test execution must occur before the end date time, when it is populated</description>
        <errorConditionFormula>NOT(ISNULL(provar__Start_Date_Time__c) || ISNULL(provar__End_Date_Time__c))&amp;&amp;
provar__Start_Date_Time__c &gt; provar__End_Date_Time__c</errorConditionFormula>
        <errorDisplayField>provar__End_Date_Time__c</errorDisplayField>
        <errorMessage>The end date time cannot occur before the start date time</errorMessage>
    </validationRules>
</CustomObject>